<package format="2">
  <name>mirte_master_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for Mirte Master</p>
    <p>This package contains configuration data, 3D models and launch files
for Mirte Master robot</p>
  </description>
  <author>Tyler Olson</author>
  <author>Jasper van Brakel</author>
  <maintainer email="J.C.vanBrakel@student.tudelft.nl" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>xacro</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_mecanum_plugins</depend>
  <depend>gazebo_sensor_collection</depend>
  <export>
    <architecture_independent />
  </export>
</package>