<package format="2">
  <name>mirte_master_description</name>
  <version>1.1.0</version>
  <description>
    <p>URDF Description package for Mirte Master</p>
    <p>This package contains configuration data, 3D models and launch files for Mirte Master robot</p>
  </description>
  <author>Tyler Olson</author>
  <author>Jasper van Brakel</author>
  <maintainer email="J.C.vanBrakel@student.tudelft.nl" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>xacro</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <depend>gazebo_ros</depend>
  <exec_depend>gazebo_sensor_collection</exec_depend>
  <exec_depend>ridgeback_gazebo_plugins</exec_depend>
  <exec_depend>ridgeback_control</exec_depend>
  <exec_depend>hector_gazebo_plugins</exec_depend>
  <exec_depend>mirte_gazebo</exec_depend>
  <exec_depend>mirte_base_control</exec_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>
