<package format="2">
  <name>mirte_master_description</name>
  <version>1.2.0</version>
  <description>
    <p>URDF Description package for Mirte Master</p>
    <p>This package contains configuration data, 3D models and launch files for Mirte Master robot</p>
  </description>
  <author>Tyler Olson</author>
  <author>Jasper van Brakel</author>
  <maintainer email="J.C.vanBrakel@student.tudelft.nl" />
  <license>BSD-3-Clause</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>gazebo_sensor_collection_description</exec_depend>
  <export>
    <architecture_independent />
  </export>
</package>
