<package format="2">
  <name>mirte_master_gazebo</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description and simulation package for the Mirte Master robot</p>
    <p>This package contains configuration data, 3D models and launch files for Mirte Master robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <author>Jasper van Brakel (SuperJappie08)</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>xacro</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <!-- <exec_depend>mecanum_gazebo_plugin</exec_depend> -->
  <!-- <depend>gazebo_ros_control</depend> -->
  <depend>ros_controllers</depend>
  <export>
    <architecture_independent />
  </export>
</package>
